--- a/c-legacy-releases/2024/09122024.md
+++ b/c-legacy-releases/2024/09122024.md
@@ -6,10 +6,10 @@ last-update: October 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: 42cf0348-3fc1-4ec9-b12f-96bf395cadc6
-source-git-commit: 201cf6e8ffe4f56a65697dc614d2376ce73e51dc
+source-git-commit: 175883b8c43e020c555b9c90f3ea9126b34ef222
 workflow-type: tm+mt
-source-wordcount: '3647'
-ht-degree: 100%
+source-wordcount: '3649'
+ht-degree: 99%
 
 ---
 
@@ -26,7 +26,7 @@ ht-degree: 100%
 * 即將推出的 Experience League 活動
 * 最新影片教學課程
 
-為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/zh-hant#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/zh-hant/docs)、[課程](https://experienceleague.adobe.com/zh-hant#courses)、[活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
+為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/zh-hant/docs)、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
 
 **提供意見反應**
 
@@ -91,9 +91,9 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 ### Experience League 活動
 
-+++詳細資訊
++++詳細資料
 
-檢視所有[即將舉行的活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)或瀏覽關於 Experience League 的[過去活動錄影](https://experienceleague.adobe.com/zh-hant/docs/events/experience-league-recorded-events/overview)。
+檢視所有[即將舉行的活動](https://experienceleague.adobe.com/events/)或瀏覽關於 Experience League 的[過去活動錄影](https://experienceleague.adobe.com/zh-hant/docs/events/experience-league-recorded-events/overview)。
 
 +++
 
@@ -101,9 +101,9 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 了解 [!DNL Adobe System Status] 的最新功能和更新。
 
-+++詳細資訊
++++詳細資料
 
-[!DNL Adobe System Status] 提供有關 Adobe 產品的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
+[!DNL Adobe System Status] 提供有關 Adobe 產品和服務的詳細資訊、狀態更新和電子郵件通知。收到有關服務中斷、作業中斷和維護事件的通知。請前往 [status.adobe.com](https://status.adobe.com/) 了解詳情。
 
 發行日期：**2024 年 8 月 19 日**
 
@@ -131,7 +131,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 了解關於 [!DNL Experience Cloud] 統一介面元件和管理。管理產品和使用者、配置設定檔的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
-+++詳細資訊
++++詳細資料
 
 發行日期：**2024 年 9 月 10 日**
 
@@ -148,7 +148,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 尋找 [!DNL Experience Platform] 和 [!UICONTROL Mobile SDK] 的最新發行資訊和新文件。檢視 Experience League 上的新教學課程和知識庫。
 
-+++詳細資訊
++++詳細資料
 
 * [[!DNL Experience Platform] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-platform/release-notes/latest)
 
@@ -176,7 +176,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 在 Experience League 上尋找 [!DNL Real-Time Customer Data Platform] 的最新教學課程。
 
-+++詳細資訊
++++詳細資料
 
 * 教學影片：[了解 Real-Time Customer Data Platform](https://experienceleague.adobe.com/zh-hant/docs/platform-learn/tutorials/rtcdp/understanding-the-real-time-customer-data-platform)
 
@@ -188,7 +188,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 
 尋找 [!DNL Adobe Analytics] 和 [!DNL AppMeasurement] 的最新版本資訊。檢視 Experience League 上的全新教學課程。
 
-+++詳細資訊
++++詳細資料
 
 [!DNL Analytics] 發行日期：**2024 年 10 月 2 日**
 
@@ -221,13 +221,13 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 | 2024 年 8 月 | [[!DNL Android 10] 流量自 2023 年 5 月起有所增加 (維度 **[!DNL Operating System]**)](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24442) | 新文章 | 了解 [!DNL Android 10] 流量 (維度 **[!DNL Operating System]**) 在 [!DNL Adobe Analytics] 中為何有所增加。 |
 
 
-+++
++++ 
 
 ## ![圖示](/assets/analytics.png) [!DNL Customer Journey Analytics] {#cja}
 
 尋找 [!DNL Customer Journey Analytics] 的最新版本資訊。檢視 Experience League 上的全新教學課程。
 
-+++詳細資訊
++++詳細資料
 
 [!DNL Customer Journey Analytics] 發行日期：**2024 年 10 月 2 日**
 
@@ -241,8 +241,8 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 |Published|Name|Type|Description |
 | -----------| ---------- | ---------- | ---------- |
-|August 2024|[Overview of stitching](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics-learn/tutorials/visitor-id/overview-of-stitching)|Video |View a quick overview into the process of stitching. With many individuals interacting with your content across multiple channels and devices, it becomes ever more important to connect these unauthenticated events to authenticated ones. |
-|August 2024|[Funnel friction analysis](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics-learn/tutorials/guided-analysis/funnel/funnel-friction-analysis)|Updated video |Learn how to use the funnel friction view in Customer Journey Analytics. This view provides a visual representation of a critical user journey in your product and helps you determine where there is friction in it.| -->
+|August 2024|[Overview of stitching](https://experienceleague.adobe.com/en/docs/customer-journey-analytics-learn/tutorials/visitor-id/overview-of-stitching)|Video |View a quick overview into the process of stitching. With many individuals interacting with your content across multiple channels and devices, it becomes ever more important to connect these unauthenticated events to authenticated ones. |
+|August 2024|[Funnel friction analysis](https://experienceleague.adobe.com/en/docs/customer-journey-analytics-learn/tutorials/guided-analysis/funnel/funnel-friction-analysis)|Updated video |Learn how to use the funnel friction view in Customer Journey Analytics. This view provides a visual representation of a critical user journey in your product and helps you determine where there is friction in it.| -->
 
 +++
 
@@ -250,7 +250,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 尋找 [!DNL Streaming Media Analytics] 的最新版本資訊。檢視 Experience League 上的全新教學課程。
 
-+++詳細資訊
++++詳細資料
 
 * [!DNL Streaming Media Analytics] [發行說明](https://experienceleague.adobe.com/zh-hant/docs/media-analytics/using/release-notes/release-notes)
 
@@ -262,9 +262,9 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 [!DNL Experience Manager] 中的新功能、修正及更新。Adobe 建議使用內部部署的客戶部署最新修補程式，以確保擁有更出色的穩定性、安全性及效能。
 
-+++詳細資訊
++++詳細資料
 
-### Experience Manager 版本資訊
+### Experience Manager 發行資訊
 
 所有 [!DNL Experience Manager] 的發行說明都會保留在以下頁面：
 
@@ -281,7 +281,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 ### [!DNL Experience Manager] 最新教學課程 {#tutorials-aem}
 
-[!DNL Experience Manager] 上的全新 [!DNL Experience Manager] 教學課程
+針對[!DNL Experience Manager as a Cloud Service]發佈的新影片和書面教學課程。
 
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- | ---------- |---------- |
@@ -319,7 +319,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 在 Experience League 上存取 [!DNL Adobe Commerce] 的發行說明、新教學課程和知識庫文章。
 
-+++詳細資訊
++++詳細資料
 
 * 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
 * 請參閱「[Adobe [!DNL Commerce] 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce-merchant-services/user-guides/home)」，查看 Commerce 服務版本資訊和文件。
@@ -341,7 +341,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 |---------|--------|---------|---------|
 | 2024 年 8 月 | [[!DNL Quality Patches Tool (QPT)]](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview) | 新文章 | 有關如何套用 [!DNL QPT] 1.1.49 和 [!DNL QPT] 1.1.50 中可用之修補程式的新文章已發佈，而且可以在其各自區段中找到。 |
 | 2024 年 8 月 | [[!DNL Live Search] 面向未依字母順序分類](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/live-search-facets-not-sorted) | 新文章 | 了解 [!DNL Live Search] 面向未依字母順序分類的解決方法。 |
-| 2024 年 8 月 | [淘汰  [!DNL Adobe Commerce Help Center]](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/announcements/news/decommissioning-of-adobe-commerce-help-center) | 新文章 | Adobe Commerce 已將我們的支援接收程序從 [!DNL Adobe Commerce Help Center] 移轉到 [!DNL Adobe Experience League]。[!DNL Adobe Commerce Help Center] 已在 2024 年 7 月 29 日進入唯讀狀態，所有新的支援案例現在都是透過 [[!DNL Adobe Experience League]](https://experienceleague.adobe.com/zh-hant) 提交。 |
+| 2024 年 8 月 | [淘汰  [!DNL Adobe Commerce Help Center]](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/announcements/news/decommissioning-of-adobe-commerce-help-center) | 新文章 | Adobe Commerce 已將我們的支援接收程序從 [!DNL Adobe Commerce Help Center] 移轉到 [!DNL Adobe Experience League]。[!DNL Adobe Commerce Help Center] 已在 2024 年 7 月 29 日進入唯讀狀態，所有新的支援案例現在都是透過 [[!DNL Adobe Experience League]](https://experienceleague.adobe.com) 提交。 |
 | 2024 年 8 月 | [修正資料未在 [!DNL Commerce Data Exporter] 摘要中更新，且具有變更記錄表的 [!DNL cron] 記錄錯誤不存在](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/mdee-table-does-not-exist) | 新文章 | 了解有關因 [!DNL Data Exporter] [[!DNL Mview]](https://developer.adobe.com/commerce/php/development/components/indexing/#mview) 訂閱中使用錯誤的檢視 ID 而導致之修正資料同步問題的解決方案。 |
 | 2024 年 8 月 | [可用於 Adobe Commerce 的安全性更新 - [!DNL APSB24-61]](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/security-update-available-for-adobe-commerce-apsb24-61) | 新文章 | 了解 Adobe 於 2024 年 8 月 13 日為 Adobe Commerce、[!DNL Magento Open Source] 和 [!DNL Adobe Commerce Webhooks Plugin] 發行的定期排程安全性更新。 |
 | 2024 年 8 月 | [疑難排解加密金鑰輪換問題： [!DNL CVE-2024-34102]](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/troubleshooting-encryption-key-rotation-cve-2024-34102) | 新文章 | 了解如何在遵循這篇[文章](https://experienceleague.adobe.com/zh-hant/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/security-update-available-for-adobe-commerce-apsb24-40-revised-to-include-isolated-patch-for-cve-2024-34102) ([!DNL CVE-2024-34102]) 中概述的步驟後疑難排解加密金鑰輪換問題。 |
@@ -353,13 +353,13 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 取得 [!DNL Adobe Target] 預先發行說明、目前發行說明和新教學課程的存取權。
 
-+++詳細資訊
++++詳細資料
 
 <!-- ### New [!DNL Target] support knowledge base{#kb-target}
 
 |Published|Name|Type|Description|
 |---------|----|----|-----------|
-|July 2024|[[!DNL Adobe Target] bulk profile update [!DNL API] throws *[!DNL Unexpected Error]* when using [!DNL Postman]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24281)|New article| Learn about how to fix the issue when running the [!DNL Target Bulk Profile Update API] throws the *[!DNL Unexpected Error]* message in [!DNL Postman].|
+|July 2024|[[!DNL Adobe Target] bulk profile update [!DNL API] throws *[!DNL Unexpected Error]* when using [!DNL Postman]](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-24281)|New article| Learn about how to fix the issue when running the [!DNL Target Bulk Profile Update API] throws the *[!DNL Unexpected Error]* message in [!DNL Postman].|
 -->
 
 * 如需搶鮮版資訊，請參閱 [[!DNL Adobe Target]  搶鮮版](https://experienceleague.adobe.com/zh-hant/docs/target/using/release-notes/target-release-notes)
@@ -371,7 +371,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 取得 [!DNL Adobe Campaign] 最新更新。在 Experience League 上尋找新教學課程和知識庫支援文章。
 
-+++詳細資訊
++++詳細資料
 
 ### 最新 Campaign 產品版本
 
@@ -419,7 +419,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 了解關於 [!DNL Journey Optimizer] 的最新發行資訊。在 Experience League 上檢視最新的教學課程和知識庫支援文章。
 
-+++詳細資訊
++++詳細資料
 
 ### [!DNL Journey Optimizer] 產品發行更新
 
@@ -446,7 +446,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 尋找 Adobe [!DNL Journey Optimizer B2b Edition] 的發行說明和新文件。
 
-+++詳細資訊
++++詳細資料
 
 * 請參閱 [[!DNL Journey Optimizer B2B Edition] 文件](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-b2b/user/guide-overview)，以取得發行說明和自助功能。
 * 請參閱 [[!DNL Journey Optimizer B2B Edition]](https://business.adobe.com/products/journey-optimizer-b2b-edition.html) 以了解產品資訊。
@@ -457,7 +457,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 在 Experience League 上存取 [!DNL Journey Orchestration] 最新發行說明。
 
-+++詳細資訊
++++詳細資料
 
 ### 最新 [!DNL Journey Orchestration] 產品版本
 
@@ -477,7 +477,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 了解 [!DNL Marketo Engage] 的最新發行說明和發行排程。
 
-+++詳細資訊
++++詳細資料
 
 ### Marketo Engage 核心更新
 
@@ -503,7 +503,7 @@ New articles and updates to existing articles for [!DNL Marketo].
 
 |Published|Name|Type|Description|
 | -----------| ---------- | ---------- | ---------- |
-|April 2024|[What happens when the [!UICONTROL Default Dashboard] object is changed in [!DNL Marketo Measure]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24085)|New article| Learn about the effects of changing the [!UICONTROL Default Dashboard] object in [!DNL Marketo Measure] settings.|
+|April 2024|[What happens when the [!UICONTROL Default Dashboard] object is changed in [!DNL Marketo Measure]](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-24085)|New article| Learn about the effects of changing the [!UICONTROL Default Dashboard] object in [!DNL Marketo Measure] settings.|
 
 {style="table-layout:auto"} -->
 
@@ -513,7 +513,7 @@ New articles and updates to existing articles for [!DNL Marketo].
 
 了解 [!DNL Adobe Workfront] 的最新發行說明。在 Experience League 上找到新教學課程。
 
-+++詳細資訊
++++詳細資料
 
 ### [!DNL Adobe Workfront] 更新
 
@@ -543,12 +543,12 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 |Published|Name|Type|Description|
 | -----------| ---------- | ---------- | ---------- |
-|December 2023|[[!DNL Workfront]: Apply layout template](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html?lang=zh-Hant)|New article| Learn how to apply the layout template in four ways: [!UICONTROL User profile], [!UICONTROL Job Role], [!UICONTROL Home Team], and [!UICONTROL Home Group].|
-|December 2023|[[!DNL Workfront]: proof failed to generate](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23149.html?lang=zh-Hant)|New article| Learn how to resolve the `Proof Failed to Generate` error when you upload a new proof.|
-|December 2023|[[!DNL Fusion]: `Failed to verify connection '52174'. Status Code Error: 500`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23142.html?lang=zh-Hant)|New article| Learn how to resolve the [!DNL Workfront Fusion] error, `Failed to verify connection '52174'. Status Code Error: 500`.|
-|December 2023|[[!DNL Workfront]: Stuck export](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23080.html?lang=zh-Hant)|New article| Learn how to resolve the issue if your [!UICONTROL Kick-start] export or a [!UICONTROL Resource Planner] export is stuck.|
-|December 2023|[[!DNL Workfront Fusion]: `JWT Connection Error` for [!DNL AEM Assets Fusion]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22911.html?lang=zh-Hant)|New article| Learn how to resolve if a `JWT connection error` occurs while configuring a connection for [!DNL AEM Assets as a Cloud Service] using the [!DNL Fusion AEM Assets] module.|
-|December 2023|[Project sharing lists are automatically pre-populated on creating new projects](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23045.html?lang=zh-Hant)|New article| Learn how to resolve if project sharing lists get automatically pre-populated.|
+|December 2023|[[!DNL Workfront]: Apply layout template](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html)|New article| Learn how to apply the layout template in four ways: [!UICONTROL User profile], [!UICONTROL Job Role], [!UICONTROL Home Team], and [!UICONTROL Home Group].|
+|December 2023|[[!DNL Workfront]: proof failed to generate](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23149.html)|New article| Learn how to resolve the `Proof Failed to Generate` error when you upload a new proof.|
+|December 2023|[[!DNL Fusion]: `Failed to verify connection '52174'. Status Code Error: 500`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23142.html)|New article| Learn how to resolve the [!DNL Workfront Fusion] error, `Failed to verify connection '52174'. Status Code Error: 500`.|
+|December 2023|[[!DNL Workfront]: Stuck export](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23080.html)|New article| Learn how to resolve the issue if your [!UICONTROL Kick-start] export or a [!UICONTROL Resource Planner] export is stuck.|
+|December 2023|[[!DNL Workfront Fusion]: `JWT Connection Error` for [!DNL AEM Assets Fusion]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22911.html)|New article| Learn how to resolve if a `JWT connection error` occurs while configuring a connection for [!DNL AEM Assets as a Cloud Service] using the [!DNL Fusion AEM Assets] module.|
+|December 2023|[Project sharing lists are automatically pre-populated on creating new projects](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23045.html)|New article| Learn how to resolve if project sharing lists get automatically pre-populated.|
 
 {style="table-layout:auto"}
 -->
@@ -559,7 +559,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 ## ![圖示](/assets/ec_appicon_24.png) [!DNL Adobe Mix Modeler] {#mix-modeler}
 
-+++詳細資訊
++++詳細資料
 
 請參閱以下頁面了解最新資訊：
 
@@ -572,7 +572,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 [!DNL Adobe Advertising] 發行說明。
 
-+++詳細資訊
++++詳細資料
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
@@ -582,7 +582,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 查看 [ [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
 
-+++## ![圖示](/assets/experience-league.png) Adobe 內容供應鏈{#content-supply-chain}
++++## ![圖示](/assets/experience-league.png) Adobe內容供應鏈{#content-supply-chain}
 
 如需有關 Experience League 的最新教學課程，請參閱「[內容供應鏈](https://experienceleague.adobe.com/zh-hant/docs/content-supply-chain-learn/tutorials/overview)」。
 
@@ -590,7 +590,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 | Published | Name | Type | Description |
 | -----------| ---------- | ---------- | ---------- |
-|February 2024|[Content Supply Chain Tutorials](https://experienceleague.adobe.com/docs/content-supply-chain-learn/tutorials/overview.html?lang=zh-Hant)|Videos |View content supply chain tutorials on Experience League. Content supply chain is Adobe's an end-to-end solution to accelerate and simplify your content supply chain with generative AI and intelligent automation.|
+|February 2024|[Content Supply Chain Tutorials](https://experienceleague.adobe.com/docs/content-supply-chain-learn/tutorials/overview.html)|Videos |View content supply chain tutorials on Experience League. Content supply chain is Adobe's an end-to-end solution to accelerate and simplify your content supply chain with generative AI and intelligent automation.|
 
 {style="table-layout:auto"}
 
@@ -600,7 +600,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 [!DNL Adobe Pass] 是多螢幕電視平台，可協助電視台、有線電視網路和服務提供者，讓他們打造具吸引力的個人化觀看體驗並藉此創造營收。
 
-+++詳細資訊
++++詳細資料
 
 請參閱 [Adobe Pass 文件](https://experienceleague.adobe.com/zh-hant/docs/pass)，找到特定版本的資訊、系統需求、限制、已修正的問題和已知問題。
 
@@ -610,7 +610,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 專為 [!DNL Document Cloud] 發佈的新教學課程，包括 [!DNL Acrobat Services] 和 [!DNL Acrobat Sign]。
 
-+++詳細資訊
++++詳細資料
 
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |---------- |
@@ -637,7 +637,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 針對 [!DNL Adobe Creative Cloud for enterprise] 應用程式的全新教學課程。
 
-+++詳細資訊
++++詳細資料
 
 如需了解最新教學課程，請參閱[適用於企業的 Creative Cloud 教學課程](https://experienceleague.adobe.com/zh-hant/docs/creative-cloud-enterprise-learn/cce-learning-hub/overview)。
 
@@ -653,16 +653,16 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 <!-- ## ![Icon](/assets/certification-badge.png) Certification{#certification}
 
-Attention all Adobe certification candidates! Visit the Experience Cloud [Certification](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview) site on Experience League. 
+Attention all Adobe certification candidates! Visit the Experience Cloud [Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) site on Experience League. 
 
 +++Details
 
-The [Experience Cloud Certification](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview) site is your one-stop shop for all [!DNL Experience Cloud] certification-related content and is updated regularly with:
+The [Experience Cloud Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) site is your one-stop shop for all [!DNL Experience Cloud] certification-related content and is updated regularly with:
 
 * Available certifications
 * Certification renewals for Adobe applications
 * Certification program updates
 
-And more! Head over to [Adobe Certification](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview) on Experience League and start your certification journey today!
+And more! Head over to [Adobe Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) on Experience League and start your certification journey today!
 
 +++ -->
